syntax = "proto3";

package ntx.v1;

import "ntx/v1/common.proto";

option go_package = "github.com/voidarchive/ntx/gen/go/ntx/v1;ntxv1";

service AnalyzerService {
  rpc Analyze(AnalyzeRequest) returns (AnalyzeResponse);
  rpc Compare(CompareRequest) returns (CompareResponse);
  rpc Sector(SectorRequest) returns (SectorResponse);
}

// StockAnalysis contains analysis data for a stock.
message StockAnalysis {
  Stock stock = 1;
  Price current_price = 2;

  // Valuation metrics
  double pe_ratio = 3;
  double pb_ratio = 4;
  double eps = 5;
  double book_value = 6;

  // Performance metrics
  double week_52_high = 7;
  double week_52_low = 8;
  double avg_volume_30d = 9;
  double price_vs_52w_high = 10;  // percentage from 52w high

  // Technical signals (simple)
  Signal trend = 11;
  Signal volume_signal = 12;
}

enum Signal {
  SIGNAL_UNSPECIFIED = 0;
  SIGNAL_BULLISH = 1;
  SIGNAL_BEARISH = 2;
  SIGNAL_NEUTRAL = 3;
}

// StockComparison shows side-by-side comparison.
message StockComparison {
  repeated StockAnalysis stocks = 1;
}

// SectorAnalysis contains sector-level data.
message SectorAnalysis {
  Sector sector = 1;
  int32 stock_count = 2;
  double avg_pe = 3;
  double avg_change = 4;
  int64 total_turnover = 5;
  repeated string top_gainers = 6;
  repeated string top_losers = 7;
}

// Request/Response messages

message AnalyzeRequest {
  string symbol = 1;
}

message AnalyzeResponse {
  StockAnalysis analysis = 1;
}

message CompareRequest {
  repeated string symbols = 1;
}

message CompareResponse {
  StockComparison comparison = 1;
}

message SectorRequest {
  Sector sector = 1;
}

message SectorResponse {
  SectorAnalysis analysis = 1;
}
